--- a/front-end/src/locales/en/terms.json
+++ b/front-end/src/locales/en/terms.json
@@ -46,11 +46,37 @@
         ]
       },
       {
-        "title": "SECTION_NAME",
+        "title": "OUR SERVICES",
         "content": [
-          "First paragraph or point",
-          "Second paragraph or point",
-          "etc..."
+          "The information provided when using the Services is not intended for distribution to or use by any person or entity in any jurisdiction or country where such distribution or use would be contrary to law or regulation or which would subject us to any registration requirement within such jurisdiction or country.",
+          "Accordingly, those persons who choose to access the Services from other locations do so on their own initiative and are solely responsible for compliance with local laws, if and to the extent local laws are applicable."
+        ]
+      },
+      {
+        "title": "INTELLECTUAL PROPERTY RIGHTS",
+        "content": [
+          "Our intellectual property",
+          "We are the owner or the licensee of all intellectual property rights in our Services, including all source code, databases, functionality, software, website designs, audio, video, text, photographs, and graphics in the Services (collectively, the \"Content\"), as well as the trademarks, service marks, and logos contained therein (the \"Marks\").",
+          "Our Content and Marks are protected by copyright and trademark laws (and various other intellectual property rights and unfair competition laws) and treaties around the world.",
+          "The Content and Marks are provided in or through the Services \"AS IS\" for your personal, non-commercial use or internal business purpose only.",
+          "Your use of our Services",
+          "Subject to your compliance with these Legal Terms, including the \"PROHIBITED ACTIVITIES\" section below, we grant you a non-exclusive, non-transferable, revocable license to:",
+          "⚫ access the Services; and",
+          "• download or print a copy of any portion of the Content to which you have properly gained access,",
+          "solely for your personal, non-commercial use or internal business purpose.",
+          "Except as set out in this section or elsewhere in our Legal Terms, no part of the Services and no Content or Marks may be copied, reproduced, aggregated, republished, uploaded, posted, publicly displayed, encoded, translated, transmitted, distributed, sold, licensed, or otherwise exploited for any commercial purpose whatsoever, without our express prior written permission.",
+          "If you wish to make any use of the Services, Content, or Marks other than as set out in this section or elsewhere in our Legal Terms, please address your request to: If we ever grant you the permission to post, reproduce, or publicly display any part of our Services or Content, you must identify us as the owners or licensors of the Services, Content, or Marks and ensure that any copyright or proprietary notice appears or is visible on posting, reproducing, or displaying our Content.",
+          "We reserve all rights not expressly granted to you in and to the Services, Content, and Marks.",
+          "Any breach of these Intellectual Property Rights will constitute a material breach of our Legal Terms and your right to use our Services will terminate immediately.",
+          "Your submissions",
+          "Please review this section and the \"PROHIBITED ACTIVITIES\" section carefully prior to using our Services to understand the (a) rights you give us and (b) obligations you have when you post or upload any content through the Services.",
+          "Submissions: By directly sending us any question, comment, suggestion, idea, feedback, or other information about the Services (\"Submissions\"), you agree to assign to us all intellectual property rights in such Submission. You agree that we shall own this Submission and be entitled to its unrestricted use and dissemination for any lawful purpose, commercial or otherwise, without acknowledgment or compensation to you.",
+          "You are responsible for what you post or upload: By sending us Submissions through any part of the Services you:",
+          "• confirm that you have read and agree with our \"PROHIBITED ACTIVITIES\" and will not post, send, publish, upload, or transmit through the Services any Submission that is illegal, harassing, hateful, harmful, defamatory, obscene, bullying, abusive, discriminatory, threatening to any person or group, sexually explicit, false, inaccurate, deceitful, or misleading;",
+          "• to the extent permissible by applicable law, waive any and all moral rights to any such Submission;",
+          "• warrant that any such Submissions are original to you or that you have the necessary rights and licenses to submit such Submissions and that you have full authority to grant us the above-mentioned rights in relation to your Submissions; and",
+          "• warrant and represent that your Submissions do not constitute confidential information.",
+          "You are solely responsible for your Submissions and you expressly agree to reimburse us for any and all losses that we may suffer because of your breach of (a) this section, (b) any third party's intellectual property rights, or (c) applicable law."
         ]
       }
     ]
