--- a/front-end/src/locales/en/en.json
+++ b/front-end/src/locales/en/en.json
@@ -47,6 +47,14 @@
     "multi-local": "Multiplayer (Local)",
     "tournament": "Tournament",
     "select-mode": "Select mode for ",
-    "select-back": "Back to Game Selection"
+    "select-back": "Back to Game Selection",
+    "create-join": "Create or join a tournament",
+    "create-tournament": "Create the tournament",
+    "join-tournament": "Join tournament",
+    "tournament-id": "Enter the tournament id",
+    "number-players": "Number of players",
+    "waiting-players": "Waiting for the player ",
+    "start-tournament": "Start the tournament",
+    "join": "Join a tournament"
 }
   
