feat: upgrade the create (join) tournament page leading to waiting_players

--- a/front-end/src/locales/de/de.json
+++ b/front-end/src/locales/de/de.json
@@ -55,6 +55,7 @@
     "number-players": "Anzahl der Spieler",
     "waiting-players": "Warten auf den Spieler ",
     "start-tournament": "Turnier starten",
-    "join": "Turnier beitreten"
+    "join": "Turnier beitreten",
+    "player": "Spieler"
   }
   
