--- a/front-end/src/locales/en/en.json
+++ b/front-end/src/locales/en/en.json
@@ -55,6 +55,7 @@
     "number-players": "Number of players",
     "waiting-players": "Waiting for the player ",
     "start-tournament": "Start the tournament",
-    "join": "Join a tournament"
+    "join": "Join a tournament",
+    "player": "Player"
 }
   
