--- a/front-end/src/locales/fr/fr.json
+++ b/front-end/src/locales/fr/fr.json
@@ -55,6 +55,7 @@
     "number-players": "Nombre de joueurs",
     "waiting-players": "En attente du joueur ",
     "start-tournament": "Démarrer le tournoi",
-    "join": "Rejoindre un tournoi"
+    "join": "Rejoindre un tournoi",
+    "player": "Joueur"
   }
   
