i may destroy all my tournament system

--- a/front-end/src/locales/en/en.json
+++ b/front-end/src/locales/en/en.json
@@ -54,7 +54,7 @@
     "join-tournament": "Join tournament",
     "tournament-id": "Enter the tournament id",
     "number-players": "Number of players",
-    "waiting-players": "Waiting for the player ",
+    "waiting-players": "Waiting for players ",
     "start-tournament": "Start the tournament",
     "join": "Join a tournament",
     "player": "Player",
