--- a/front-end/src/locales/fr/fr.json
+++ b/front-end/src/locales/fr/fr.json
@@ -54,7 +54,7 @@
     "join-tournament": "Rejoindre ce tournoi",
     "tournament-id": "Entrez l'identifiant du tournoi",
     "number-players": "Nombre de joueurs",
-    "waiting-players": "En attente du joueur ",
+    "waiting-players": "En attente de joueurs ",
     "start-tournament": "Démarrer le tournoi",
     "join": "Rejoindre un tournoi",
     "player": "Joueur",
@@ -62,7 +62,7 @@
     "send": "Envoyer",
     "message": "Tapez un message",
     "loading": "Chargement...",
-    "with-friend": "Versus amis (à Distance)",
+    "with-friends": "Versus amis (à Distance)",
     "iAgreeTo": "J'accepte les",
     "game-withfriend": "Match avec un ami",
     "join-create-match": "Rejoindre ou créer un match",
