still have some problem on the tournament but the logic is better

--- a/front-end/src/locales/de/de.json
+++ b/front-end/src/locales/de/de.json
@@ -52,7 +52,8 @@
     "create-join": "Erstellen oder beitreten Sie einem Turnier",
     "create-tournament": "Turnier erstellen",
     "join-tournament": "Turnier beitreten",
-    "tournament-id": "Geben Sie die Turnier-ID ein",
+    "tournament-id-text": "Geben Sie die Turnier-ID ein",
+    "tournament-id": "Turnier-ID: ",
     "number-players": "Anzahl der Spieler",
     "waiting-players": "Warten auf den Spieler ",
     "start-tournament": "Turnier starten",
