--- a/front-end/src/locales/en/en.json
+++ b/front-end/src/locales/en/en.json
@@ -52,7 +52,8 @@
     "create-join": "Create or join a tournament",
     "create-tournament": "Create the tournament",
     "join-tournament": "Join tournament",
-    "tournament-id": "Enter the tournament id",
+    "tournament-id-text": "Enter the tournament ID",
+    "tournament-id": "Tournament ID: ",
     "number-players": "Number of players",
     "waiting-players": "Waiting for players ",
     "start-tournament": "Start the tournament",
