--- a/front-end/src/locales/fr/fr.json
+++ b/front-end/src/locales/fr/fr.json
@@ -52,7 +52,8 @@
     "create-join": "Créez ou rejoignez un tournoi",
     "create-tournament": "Créer le tournoi",
     "join-tournament": "Rejoindre ce tournoi",
-    "tournament-id": "Entrez l'identifiant du tournoi",
+    "tournament-id-text": "Entrez l'identifiant du tournoi",
+    "tournament-id": "L'identifiant du tournoi: ",
     "number-players": "Nombre de joueurs",
     "waiting-players": "En attente de joueurs ",
     "start-tournament": "Démarrer le tournoi",
