right pop up with the cover_photo and the username

--- a/front-end/src/locales/de/de.json
+++ b/front-end/src/locales/de/de.json
@@ -92,6 +92,7 @@
     "game-invitation-text": " lädt Sie zu einem Spiel ein",
     "accept": "Akzeptieren",
     "decline": "Ablehnen",
-    "tourn-message": "Ein neues Turnier wurde erstellt!"
+    "tourn-message": "Ein neues Turnier wurde erstellt!",
+    "go-back": "Zurück"
   }
   
