fix the cover photo image in the header of the chat

--- a/front-end/src/locales/de/de.json
+++ b/front-end/src/locales/de/de.json
@@ -108,6 +108,8 @@
     "search-opponent": "Suche nach einem Gegner",
     "starting-tournament": "Turnier startet",
     "until-start": " Sekunden bis zum Start des Spiels",
-    "in": "in"
+    "in": "in",
+    "remove": "Entfernen",
+    "unblock": "Entsperren"
   }
   
