--- a/front-end/src/locales/en/en.json
+++ b/front-end/src/locales/en/en.json
@@ -108,6 +108,8 @@
     "search-opponent": "Searching an opponent",
     "starting-tournament": "Starting tournament",
     "until-start": " seconds until match start",
-    "in": "in"
+    "in": "in",
+    "remove": "Remove",
+    "unblock": "Unblock"
 }
   
