--- a/front-end/src/locales/fr/fr.json
+++ b/front-end/src/locales/fr/fr.json
@@ -110,6 +110,8 @@
     "matchmaking": "Recherche d'adversaire",
     "starting-tournament": "Démarrage du tournoi",
     "until-start": " seconds avant le début du match",
-    "in": "dans"
+    "in": "dans",
+    "remove": "Supprimer",
+    "unblock": "Débloquer"
   }
   
