fix winner/loser component in remote mode

--- a/front-end/src/locales/de/de.json
+++ b/front-end/src/locales/de/de.json
@@ -110,6 +110,7 @@
     "until-start": " Sekunden bis zum Start des Spiels",
     "in": "in",
     "remove": "Entfernen",
-    "unblock": "Entsperren"
+    "unblock": "Entsperren",
+    "opponent_found": "Gegner gefunden !"
   }
   
