--- a/front-end/src/locales/en/en.json
+++ b/front-end/src/locales/en/en.json
@@ -110,6 +110,7 @@
     "until-start": " seconds until match start",
     "in": "in",
     "remove": "Remove",
-    "unblock": "Unblock"
+    "unblock": "Unblock",
+    "opponent_found": "Opponent found !"
 }
   
