--- a/front-end/src/locales/fr/fr.json
+++ b/front-end/src/locales/fr/fr.json
@@ -112,6 +112,7 @@
     "until-start": " seconds avant le début du match",
     "in": "dans",
     "remove": "Supprimer",
-    "unblock": "Débloquer"
+    "unblock": "Débloquer",
+    "opponent_found": "Adversaire trouvé !"
   }
   
