fix chat block/unblock and double api call + fix translate in history detail + fix the date in chat and history

--- a/front-end/src/locales/de/de.json
+++ b/front-end/src/locales/de/de.json
@@ -98,8 +98,8 @@
     "opponent_score": "Gegner Score",
     "your_rank_begin": "Ihr Anfangsrang",
     "opponent_rank_begin": "Gegner Anfangsrang",
-    "your_rank_change": "Ihr neuer Rang",
-    "opponent_rank_change": "Gegner neuer Rang",
+    "your_rank_change": "Rangänderung",
+    "opponent_rank_change": "Gegner Rangänderung",
     "your_nb_move": "Ihre Anzahl an Zügen",
     "opponent_nb_move": "Gegner Anzahl an Zügen",
     "timestamp": "Datum",
