--- a/front-end/src/locales/en/en.json
+++ b/front-end/src/locales/en/en.json
@@ -98,8 +98,8 @@
     "opponent_score": "Opponent Score",
     "your_rank_begin": "Your Rank",
     "opponent_rank_begin": "Opponent Rank",
-    "your_rank_change": "Your new Rank",
-    "opponent_rank_change": "Opponent new Rank",
+    "your_rank_change": "Your Rank progression",
+    "opponent_rank_change": "Opponent Rank progression",
     "your_nb_move": "Your number of moves",
     "opponent_nb_move": "Opponent number of moves",
     "timestamp": "Date",
