--- a/front-end/src/locales/fr/fr.json
+++ b/front-end/src/locales/fr/fr.json
@@ -99,8 +99,8 @@
     "opponent_score": "Score de l'adversaire",
     "your_rank_begin": "Votre classement",
     "opponent_rank_begin": "Classement de l'adversaire",
-    "your_rank_change": "Votre nouveau classement",
-    "opponent_rank_change": "Le nouveau classement de l'adversaire",
+    "your_rank_change": "Votre progression dans le classement",
+    "opponent_rank_change": "La progression dans le classement de votre adversaire",
     "your_nb_move": "Votre nombre de coups",
     "opponent_nb_move": "Nombre de coups de l'adversaire",
     "timestamp": "Date",
