the logic of the tournament is working

--- a/front-end/src/locales/de/de.json
+++ b/front-end/src/locales/de/de.json
@@ -121,6 +121,7 @@
     "enterCode": "Geben Sie den Code ein",
     "confirm": "Bestätigen",
     "cancel": "Abbrechen",
-    "activate": "Aktivieren"
+    "activate": "Aktivieren",
+    "continue": "Fortsetzen"
   }
   
