--- a/front-end/src/locales/en/en.json
+++ b/front-end/src/locales/en/en.json
@@ -121,6 +121,7 @@
     "enterCode": "Enter the code",
     "confirm": "Confirm",
     "cancel": "Cancel",
-    "activate": "Activate"
+    "activate": "Activate",
+    "continue": "Continue"
 }
   
