--- a/front-end/src/locales/fr/fr.json
+++ b/front-end/src/locales/fr/fr.json
@@ -123,6 +123,7 @@
     "enterCode": "Entrez le code",
     "confirm": "Confirmer",
     "cancel": "Annuler",
-    "activate": "Activer"
+    "activate": "Activer",
+    "continue": "Continuer"
   }
   
