--- a/front-end/src/locales/en/en.json
+++ b/front-end/src/locales/en/en.json
@@ -122,6 +122,8 @@
     "confirm": "Confirm",
     "cancel": "Cancel",
     "activate": "Activate",
-    "continue": "Continue"
+    "continue": "Continue",
+    "tournament-winner": "Tournament Winner !!",
+    "eliminated": "Eliminated"
 }
   
