--- a/front-end/src/locales/fr/fr.json
+++ b/front-end/src/locales/fr/fr.json
@@ -124,6 +124,8 @@
     "confirm": "Confirmer",
     "cancel": "Annuler",
     "activate": "Activer",
-    "continue": "Continuer"
+    "continue": "Continuer",
+    "tournament-winner": "Gagnant du tournoi !!",
+    "eliminated": "Éliminé"
   }
   
