--- a/front-end/src/locales/de/de.json
+++ b/front-end/src/locales/de/de.json
@@ -98,8 +98,8 @@
     "opponent_score": "Gegner Score",
     "your_rank_begin": "Ihr Anfangsrang",
     "opponent_rank_begin": "Gegner Anfangsrang",
-    "your_rank_change": "Ihr neuer Rang",
-    "opponent_rank_change": "Gegner neuer Rang",
+    "your_rank_change": "Rangänderung",
+    "opponent_rank_change": "Gegner Rangänderung",
     "your_nb_move": "Ihre Anzahl an Zügen",
     "opponent_nb_move": "Gegner Anzahl an Zügen",
     "timestamp": "Datum",
@@ -111,6 +111,19 @@
     "in": "in",
     "remove": "Entfernen",
     "unblock": "Entsperren",
-    "opponent_found": "Gegner gefunden !"
+    "opponent_found": "Gegner gefunden !",
+    "otp": "OTP (Zwei-Faktor-Authentifizierung)",
+    "enter-otp": "Geben Sie den OTP-Code ein",
+    "twoFactorAuthentication": "Zwei-Faktor-Authentifizierung",
+    "2faEnabled": "2FA aktiviert",
+    "2faDisabled": "2FA deaktiviert",
+    "scanQrCode": "Scannen Sie den QR-Code",
+    "enterCode": "Geben Sie den Code ein",
+    "confirm": "Bestätigen",
+    "cancel": "Abbrechen",
+    "activate": "Aktivieren",
+    "continue": "Fortsetzen",
+    "tournament-winner": "Turniergewinner !!",
+    "eliminated": "Sie wurden eliminiert"
   }
   
