fix play with friend if create game cannot join a game

--- a/front-end/src/locales/de/de.json
+++ b/front-end/src/locales/de/de.json
@@ -129,6 +129,7 @@
     "42-account-cannot-be-modified": "42-Konto kann nicht geändert werden",
     "error-saving-profile": "Fehler beim Speichern des Profils",
     "enter-your-new-username": "Geben Sie Ihren neuen Benutzernamen ein",
-    "enter-your-new-password": "Geben Sie Ihr neues Passwort ein"
+    "enter-your-new-password": "Geben Sie Ihr neues Passwort ein",
+    "enter-code": "Geben Sie den Spielcode ein"
   }
   
