--- a/front-end/src/locales/en/en.json
+++ b/front-end/src/locales/en/en.json
@@ -129,6 +129,7 @@
     "42-account-cannot-be-modified": "42 account cannot be modified",
     "error-saving-profile": "Error saving profile",
     "enter-your-new-username": "Enter your new username",
-    "enter-your-new-password": "Enter your new password"
+    "enter-your-new-password": "Enter your new password",
+    "enter-code": "Enter the game code"
 }
   
