Testing and fixing (#32)
* add theme and lang using the /api/profile/ + fix some warn in the console for login + fix some untranslate message + update the history

* add pong ai + fix tournament username + fix call of the api for friend list even outside the friend page

* fix the username position in remote + hide the chat icon in-game with friend

* fix play with friend if create game cannot join a game

---------

Co-authored-by: KShiro <KoganeShiro@users.noreply.github.com>

--- a/front-end/src/locales/de/de.json
+++ b/front-end/src/locales/de/de.json
@@ -124,6 +124,12 @@
     "activate": "Aktivieren",
     "continue": "Fortsetzen",
     "tournament-winner": "Turniergewinner !!",
-    "eliminated": "Sie wurden eliminiert"
+    "eliminated": "Sie wurden eliminiert",
+    "42-login-failed": "Anmeldung bei 42 fehlgeschlagen, bitte versuchen Sie es erneut",
+    "42-account-cannot-be-modified": "42-Konto kann nicht geändert werden",
+    "error-saving-profile": "Fehler beim Speichern des Profils",
+    "enter-your-new-username": "Geben Sie Ihren neuen Benutzernamen ein",
+    "enter-your-new-password": "Geben Sie Ihr neues Passwort ein",
+    "enter-code": "Geben Sie den Spielcode ein"
   }
   
